# tikra

./: .gitignore  README.md  meson.build
data/: meson.build  org.aether.tikra.desktop.in  org.aether.tikra.gschema.xml  org.aether.tikra.metainfo.xml  style.css  tikra.gresource.xml
include/: tikra.hpp
src/: ClockPage.vala  StopwatchPage.vala  TimerPage.vala  WorldClockPage.vala  application.vala  main.cpp  main.vala  meson.build  tikra.cpp  window.vala
ui/: window.blp
